[package]
name = "marwood-repl"
version = "0.1.0"
authors = ["Erik Bremen <strtok@strtok.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marwood = { path = "../marwood" }
log = "*"
pretty_env_logger = "0.4.0"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
