[package]
name = "marwood-wasm"
version = "0.1.0"
authors = ["Erik Bremen"]
edition = "2024"
resolver = "3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlDivElement',
    'Node',
    'Window',
    'CssStyleDeclaration',
    'EventTarget',
    'MessageEvent',
    'console',
]

[dependencies]
log = { version = "0.4", features = ["release_max_level_off"] }
js-sys = "0.3.77"
wasm-bindgen = "0.2"
marwood = { path = "../marwood" }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-g']
