[package]
name = "marwood"
version = "0.2.0"
description = "Scheme R5RS Virtual Machine"
repository = "https://github.com/strtok/marwood"
authors = ["Erik Bremen <strtok@strtok.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0.30"
lazy_static = "1.4.0"
