[package]
name = "marwood"
version = "0.3"
description = "Scheme R5RS Virtual Machine"
repository = "https://github.com/strtok/marwood"
authors = ["Erik Bremen <strtok@strtok.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
log = "0.4"
num = "0.4.0"
thiserror = "1.0.30"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
