[package]
name = "marwood"
version = "0.5.0"
description = "Scheme R7RS Virtual Machine"
repository = "https://github.com/strtok/marwood"
authors = ["Erik Bremen <strtok@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
num = "0.4.0"
rand = "0.9"
thiserror = "1.0.30"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
